--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,24 @@
+# macOS系统文件
+.DS_Store
+**/.DS_Store
+
 # Python
 *.pyc
 __pycache__/
+**/__pycache__/
+kk_stock_backend/__pycache__/
 
 # 环境变量
 .env
+.env.local
+.env.development
+.env.production
+
+# Node.js
+kk_stock_desktop/node_modules/
+kk_stock_desktop/dist/
+kk_stock_desktop/dist-electron/
+kk_stock_desktop/release/
 
 # 日志文件 - 全面排除
 *.log
@@ -17,29 +32,29 @@ log/*
 **/logs/*
 **/*.log
 results/
-results/*   
+results/*
 qwen3_env.txt
 
-# Python
-*.pyc
-__pycache__/
+# IDE和编辑器
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# 环境变量
-.env
+# 临时文件
+*.tmp
+*.temp
 
-# Node
-node_modules/
-dist/
-dist-electron/
+# 数据库文件
+*.db
+*.sqlite
+*.sqlite3
 
-# 日志文件 - 全面排除
-*.log
-logs/
-log/
-logs/*
-log/*
-./logs/
-./log/
-**/logs/
-**/logs/*
-**/*.log
+# 缓存文件
+.cache/
+*.cache
+
+# 进程ID文件
+*.pid
+kk_stock_backend.pid
