--- a/kk_stock_backend/requirements.txt
+++ b/kk_stock_backend/requirements.txt
@@ -29,6 +29,16 @@ scikit-learn>=1.3.0
 xgboost>=1.7.0
 joblib>=1.3.0
 
+# 深度学习 & GPU加速
+torch>=2.0.0
+torchvision>=0.15.0
+torchaudio>=2.0.0
+# CUDA支持 (可选，手动安装: conda install pytorch torchvision torchaudio pytorch-cuda=12.4 -c pytorch -c nvidia)
+
+# 科学计算加速 (可选)
+cupy-cuda12x>=12.0.0  # GPU加速NumPy替代品
+cudf-cu12>=23.0.0     # GPU加速Pandas替代品
+
 # 可视化
 matplotlib>=3.5.0,<3.9.0
 mplfinance==0.12.10b0
@@ -52,6 +62,14 @@ xlrd>=2.0.0
 aiohttp>=3.8.0
 aiohappyeyeballs>=2.0.0
 
+# 系统监控和性能
+psutil>=5.8.0          # 系统信息监控
+GPUtil>=1.4.0          # GPU使用率监控
+
+# 超参数优化
+optuna>=3.0.0          # 贝叶斯优化
+hyperopt>=0.2.7        # 超参数优化
+
 # 其他
 pypinyin>=0.54.0
 tabulate>=0.9.0
@@ -61,5 +79,6 @@ passlib==1.7.4
 apscheduler==3.11.0
 motor==3.7.1
 
-
+# 额外机器学习模型
 catboost==1.2.8
+lightgbm>=3.3.0
