--- a/kk_stock_backend/requirements.txt
+++ b/kk_stock_backend/requirements.txt
@@ -36,8 +36,8 @@ torchaudio>=2.0.0
 # CUDA支持 (可选，手动安装: conda install pytorch torchvision torchaudio pytorch-cuda=12.4 -c pytorch -c nvidia)
 
 # 科学计算加速 (可选)
-cupy-cuda12x>=12.0.0  # GPU加速NumPy替代品
-cudf-cu12>=23.0.0     # GPU加速Pandas替代品
+# cupy-cuda12x>=12.0.0  # GPU加速NumPy替代品
+# cudf-cu12>=23.0.0     # GPU加速Pandas替代品
 
 # 可视化
 matplotlib>=3.5.0,<3.9.0
